# popsicle

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  COMMERCIAL  LICENSE  LICENSE.GPLv3  MANIFEST.in  README.rst  build_wheel.sh  justfile  pyproject.toml  setup.py  test.py  test_wheel.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  build_linux.yml  build_linux.yml_  build_macos.yml  build_macos.yml_  build_windows.yml  build_windows.yml_  coverage.yml  release.yml  wheels.yml
cmake/: ArchivePythonStdlib.py  CodeCoverage.cmake
demo/: CMakeLists.txt  Main.cpp  PopsicleDemo.cpp  PopsicleDemo.h
docs/: EmbeddingTutorial.rst  QuickStartGuide.rst  conf.py
examples/: .gitignore  animated_component.py  audio_callback_cpp.py  audio_callback_python.py  audio_device.py  audio_player.py  audio_player_cpp.py  audio_player_python.py  audio_player_wave_cpp.py  audio_player_waveform.py  docs.py  drawables.py  emojis_component.py  emojis_font_component.py  hotreload_component.py  hotreload_main.py  juce_init.py  juce_matplotlib_image.py  juce_o_matic.py  layout_flexgrid.py  layout_rectangles.py  matplotlib_integration.py  nim_audio.nim  nim_audio_integration.py  numpy_audio.py  opencv_integration.py  opencv_video.py  pil_image.py  radio_buttons_checkboxes.py  slider_decibels.py  slider_values.py  slider_values_example.py  synth_midi_input.py  table_list_box.py  table_list_box.xml  test_buffer.py  wavetable_oscillator.py  wavetable_oscillator_numpy.py
examples/webgpu/: cube_popsicle.py  pbr2.py  pbr2_embed.py  pop.py  triangle.py  triangle_popsicle.py  triangle_popsicle_embed.py
examples/wip/: animated_component.py  audio_callback_cpp.py  audio_callback_python.py  audio_player_python.py  audio_player_wave_cpp.py  copy_image_pixels.py  layout_rectangles.py  slider_decibels.py  synth_midi_input.py
icons/: popsicle.icns
modules/: CMakeLists.txt
modules/juce_python/: juce_python.cpp  juce_python.h  juce_python.mm  juce_python_audio_basics.cpp  juce_python_audio_devices.cpp  juce_python_audio_formats.cpp  juce_python_audio_processors.cpp  juce_python_audio_utils.cpp  juce_python_bindings.cpp  juce_python_core.cpp  juce_python_data_structures.cpp  juce_python_events.cpp  juce_python_graphics.cpp  juce_python_gui_basics.cpp  juce_python_gui_entry.cpp  juce_python_gui_extra.cpp  juce_python_modules.cpp  juce_python_options.cpp
modules/juce_python/bindings/: ScriptJuceAudioBasicsBindings.cpp  ScriptJuceAudioBasicsBindings.h  ScriptJuceAudioDevicesBindings.cpp  ScriptJuceAudioDevicesBindings.h  ScriptJuceAudioFormatsBindings.cpp  ScriptJuceAudioFormatsBindings.h  ScriptJuceAudioProcessorsBindings.cpp  ScriptJuceAudioProcessorsBindings.h  ScriptJuceAudioUtilsBindings.cpp  ScriptJuceAudioUtilsBindings.h  ScriptJuceBindings.cpp  ScriptJuceCoreBindings.cpp  ScriptJuceCoreBindings.h  ScriptJuceDataStructuresBindings.cpp  ScriptJuceDataStructuresBindings.h  ScriptJuceEventsBindings.cpp  ScriptJuceEventsBindings.h  ScriptJuceGraphicsBindings.cpp  ScriptJuceGraphicsBindings.h  ScriptJuceGuiBasicsBindings.cpp  ScriptJuceGuiBasicsBindings.h  ScriptJuceGuiEntryPointsBindings.cpp  ScriptJuceGuiEntryPointsBindings.h  ScriptJuceGuiExtraBindings.cpp  ScriptJuceGuiExtraBindings.h  ScriptJuceOptionsBindings.cpp  ScriptJuceOptionsBindings.h
modules/juce_python/modules/: ScriptPopsicleModule.cpp
modules/juce_python/scripting/: ScriptBindings.cpp  ScriptBindings.h  ScriptEngine.cpp  ScriptEngine.h  ScriptException.h  ScriptUtilities.cpp  ScriptUtilities.h
modules/juce_python/utilities/: ClassDemangling.cpp  ClassDemangling.h  CrashHandling.cpp  CrashHandling.h  MacroHelpers.h  PyBind11Includes.h  PythonInterop.h  PythonTypes.h  WindowsIncludes.h
popsicle/: __init__.py  juce_analytics.py  juce_audio_basics.py  juce_audio_devices.py  juce_audio_formats.py  juce_audio_processors.py  juce_audio_utils.py  juce_core.py  juce_cryptography.py  juce_data_structures.py  juce_dsp.py  juce_events.py  juce_graphics.py  juce_gui_basics.py  juce_gui_extra.py  juce_opengl.py  juce_osc.py  juce_video.py  utils.py
scripts/: build_juce.sh  build_wheel.sh  generate_pyi.py  install_wheel.sh  pull_upstream.sh  repair_manylinux.sh  upload_wheel.sh
tests/: common.py  conftest.py  fixtures.py  utilities.py
tests/test_juce_core/: __init__.py  test_Array.py  test_Base64.py  test_BigInteger.py  test_ByteOrder.py  test_CriticalSection.py  test_File.py  test_FileFilter.py  test_FileInputStream.py  test_FileOutputStream.py  test_Identifier.py  test_InputStream.py  test_Ints.py  test_JSON.py  test_MemoryBlock.py  test_MemoryInputStream.py  test_MemoryMappedFile.py  test_NamedValueSet.py  test_NormalisableRange.py  test_PropertySet.py  test_Random.py  test_Range.py  test_RangedDirectoryIterator.py  test_RelativeTime.py  test_Result.py  test_String.py  test_String.py_  test_StringArray.py  test_StringPairArray.py  test_SubregionStream.py  test_TemporaryFile.py  test_Thread.py  test_ThreadPool.py  test_Time.py  test_URLInputSource.py  test_Uuid.py  test_WildcardFileFilter.py  test_XmlDocument.py  test_XmlElement.py  test_ZipFile.py
tests/test_juce_core/data/: somefile.txt  test.xml  (+1 more)
tests/test_juce_data_structures/: __init__.py  test_CachedValue.py  test_PropertiesFile.py  test_UndoManager.py  test_Value.py  test_ValueTree.py  test_ValueTreeSynchroniser.py
tests/test_juce_events/: __init__.py  test_ActionBroadcaster.py  test_AsyncUpdater.py  test_ChangeBroadcaster.py  test_LockingAsyncUpdater.py  test_Message.py  test_MessageListener.py  test_MessageManager.py  test_MultiTimer.py  test_Timer.py
tests/test_juce_graphics/: __init__.py  test_AffineTransform.py  test_BorderSize.py  test_Colour.py  test_ColourGradient.py  test_FillType.py  test_Graphics.py  test_Justification.py  test_Line.py  test_Parallelogram.py  test_Path.py  test_PathStrokeType.py  test_PixelARGB.py  test_PixelAlpha.py  test_PixelRGB.py  test_Point.py  test_Rectangle.py  test_RectangleList.py  utilities.py
tests/test_juce_gui_basics/: __init__.py  test_Button.py  test_DocumentWindow.py  test_JUCEApplication.py  test_KeyPress.py
