[build-system]
requires = [
    "setuptools>=65",
    "cmake>=3.21",
    "mypy>=1.8.0",
    "pytest>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = ["tests/"]

[tool.cibuildwheel]
build-verbosity = 3
test-requires = "pytest"
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-build = """
yum install -y zlib-devel openssl-devel freetype-devel freeglut-devel alsa-lib-devel mesa-libGL-devel  \
    xorg-x11-proto-devel xorg-x11-proto-devel libcurl-devel libpng-devel libX11-devel libXcursor-devel \
    libXrandr-devel libXinerama-devel libXrender-devel libXcomposite-devel libXinerama-devel libXcursor-devel wget && \
wget https://github.com/linux-test-project/lcov/releases/download/v2.0/lcov-2.0-1.noarch.rpm && \
yum localinstall lcov-2.0-1.noarch.rpm
"""
#repair-wheel-command = """
#pip install auditwheel-symbols && (auditwheel repair -w {dest_dir} {wheel} || auditwheel-symbols --manylinux 2014 {wheel})
#"""
